# geofetch

./: Cargo.toml  LICENSE_MIT.txt  README.md  dist-workspace.toml
src/: main.rs
