[package]
name = "geofetch"
version = "1.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figlet-rs = "0.1"
os_info = { version = "3.7", default-features = false }
si-scale = "0.2"
systemstat = "0.2"
terminal_size = "0.3"
textflow = "0.2"
