[package]
name = "geofetch"
description = "A system information utility for an extremely small subset of people"
version = "1.0.3"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/ticky/geofetch.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figlet-rs = "0.1"
os_info = { version = "3.7", default-features = false }
si-scale = "0.2"
systemstat = "0.2"
terminal_size = "0.3"
textflow = "0.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.2.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
